1999-06-19  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.h: Undef SIZEOF_LONG before including jni.h.

1999-06-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* DefClass.h (BehaviorPhase_s): Add another filler slot.

	* Archiver.m (SWARMARCHIVER_LISP_SUFFIX, SWARMARCHIVER_HDF5_SUFFIX):
	Prepend ".".
	(defaultAppPath): Off by one error in malloc. 
	Remove addition of `delim' (a ".").

1999-06-13  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* defobj.h (types_t): Add signed and unsigned types.

	* FCall.m (defobj_init_java_call_tables): Add long long entries.
	Treat them as long for now.
	(ffi_types): Treat long long as ffi_type_[us]int64 for now.
	(add_ffi_types): Support long long types.
	([FCall_c -performCall]): Likewise.
	([FCall_c -getRetVal:buf:]): Likewise.

	* FArguments.m (java_type_signature): Add long long entries.
	Treat them as long for now.
	(objc_types): Add long long entries.
	(fcall_type_size): Support long long types.
	([FArguments_c -_setReturnType_:]): Likewise.

	* FArguments.[hm], defobj.h ([FArguments_c -addLongLong:]): 
	([FArguments_c -addUnsignedLongLong:]): New methods.

	* FArguments.h (fcall_type_t): Add signed and unsigned long long.
	(FCALL_TYPE_COUNT): Bump by 2.

1999-06-11  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Arguments.m (getSwarmPrefix): New function.
	(getSwarmPrefix, getnenv): Use it.  Handle special case
	of ${prefix}.
	(expandvars): Renamed from `prefix'.
	([Arguments_c -_getSwarmHome_:]): Offbyone in sigPathBuf size.
	([Arguments_c -_getPath_:subpath:]): Expand fixed path (for ${prefix}).
	([Arguments_c -_runningFromInstall_]): Revert last change.
	([Arguments_c -getConfigPath], [Arguments_c -getDataPath]): 
	Add swarm/ to fixed path.
	([Arguments_c -getConfigPath]): Use etc/swarm/ for subpath, not
	SIGNATURE_SUBPATH.

1999-06-11  Alex Lancaster  <alex@santafe.edu>

	* Arguments.m ([Arguments_c -_getSwarmHome_:]): Add missing '/'
	between swarmHome generated by the compiled-in PREFIX and the